--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,6 +5,9 @@ on:
     tags:
       - 0.*
 
+permissions:
+  packages: write
+
 jobs:
   goreleaser:
     runs-on: ubuntu-latest
@@ -20,7 +23,7 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
-          password: ${{ secrets.SERVER_TLS_MONITOR_TOKEN }}
+          password: ${{ secrets.GITHUB_TOKEN }}
       -
         name: Set up Go
         uses: actions/setup-go@v2
@@ -32,4 +35,4 @@ jobs:
           version: latest
           args: release --rm-dist
         env:
-          GITHUB_TOKEN: ${{ secrets.ECHO_SERVER_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
