Add dockerfile release

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -3,8 +3,7 @@ project_name: echo-server
 builds:
   -
     id: echo-server
-    main: ./cmd/server
-    binary: echo-server
+    main: ./cmd/server/main.go
 
     env:
       - CGO_ENABLED=0
@@ -16,7 +15,10 @@ builds:
       - arm64
 
 archives:
-  - name_template: "{{ .ProjectName }}_{{ .Version }}_{{ .Os }}_{{ .Arch }}"
+  - replacements:
+      darwin: darwin
+      linux: linux
+      amd64: x86_64
 
 checksum:
   name_template: 'checksums.txt'
@@ -30,41 +32,41 @@ changelog:
     exclude:
       - '^docs:'
       - '^test:'
-# dockers:
-#   # You can have multiple Docker images.
-#   -
-#     # ID of the image, needed if you want to filter by it later on (e.g. on custom publishers).
-#     id: echo-server
+dockers:
+  # You can have multiple Docker images.
+  -
+    # ID of the image, needed if you want to filter by it later on (e.g. on custom publishers).
+    id: echo-server
 
-#     # GOOS of the built binaries/packages that should be used.
-#     goos: linux
+    # GOOS of the built binaries/packages that should be used.
+    goos: linux
 
-#     # GOARCH of the built binaries/packages that should be used.
-#     goarch: amd64
+    # GOARCH of the built binaries/packages that should be used.
+    goarch: amd64
 
-#     # GOAMD64 of the built binaries/packages that should be used.
-#     goamd64: 'v1'
+    # GOAMD64 of the built binaries/packages that should be used.
+    goamd64: 'v1'
 
-#     # IDs to filter the binaries/packages.
-#     ids:
-#       - echo-server
+    # IDs to filter the binaries/packages.
+    ids:
+      - echo-server
 
-#     # Templates of the Docker image names.
-#     image_templates:
-#       - "ghcr.io/jmoney/echo-server:latest"
-#       - "ghcr.io/jmoney/echo-server:{{ .Tag }}"
-#       - "ghcr.io/jmoney/echo-server:v{{ .Major }}"
+    # Templates of the Docker image names.
+    image_templates:
+      - "ghcr.io/jmoney/echo-server:latest"
+      - "ghcr.io/jmoney/echo-server:{{ .Tag }}"
+      - "ghcr.io/jmoney/echo-server:v{{ .Major }}"
 
-#     dockerfile: 'Dockerfile'
+    dockerfile: 'Dockerfile'
 
-#     use: docker
+    use: docker
 
 # .goreleaser.yaml
 brews:
   -
     name: "echo-server@{{ .Tag }}"
 
-    repository:
+    tap:
       owner: jmoney
       name: homebrew-server-utils
 
@@ -110,7 +112,7 @@ brews:
   -
     name: "echo-server"
 
-    repository:
+    tap:
       owner: jmoney
       name: homebrew-server-utils
 
